# poetry-with-scripts-example

./: README.md  doge.py  pyproject.toml  request.py
