[tool.poetry]
name = "doge"
version = "1.0.0"
description = "The description of the package"

license = "MIT"

authors = [
    "Sébastien Eustace <sebastien@eustace.io>"
]

packages = [
    { include = "*.py" },
]

repository = "https://github.com/python-poetry/poetry"
homepage = "https://github.com/python-poetry/poetry"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "~3.7"
toml = "^0.9"
# Dependencies with extras
requests = { version = "^2.13", extras = [ "security" ] }

# Optional dependencies (extras)
pendulum = { version = "^1.4", optional = true }

[tool.poetry.scripts]
my-script = 'doge:main'
my-request = 'request:main'
