[tool.poetry]
name = "doge"
version = "1.0.0"
description = "The description of the package"

license = "MIT"

packages = [
    { include = "*.py" },
]
[tool.poetry.dependencies]
python = "~3.7"

requests = { version = "^2.13" }

[tool.poetry.scripts]
my-script = 'doge:main'
my-request = 'request:main'
